# scikit-fem

./: .flake8  .gitignore  .gitpod.yml  .readthedocs.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE.md  Makefile  README.md  _setup.py  environment.yml  flake.nix  inhomo.py  performance.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: lint.yml  main.yml  mamba.yml  nix.yml  numpy2.yml
binder/: environment.yml
docs/: .conf.py.swp  .readthedocs.yml  Makefile  advanced.rst  api.rst  bcs.rst  conf.py  elements.rst  example1.rst  example2.rst  examples.rst  extended.rst  fem.rst  forms.rst  gettingstarted.rst  howto.rst  index.rst  learning.rst  listofexamples.rst  overview.rst  tutorial.rst  tutorials.rst
docs/examples/: Makefile  backward_facing_step.py  beams.msh  blackwell_pepper.py  box.msh  bratu.py  cholesky.py  creeping.py  creeping.rst  disk.json  elasticity.py  elasticity.rst  ex01.py  ex01.rst  ex02.py  ex02.rst  ex03.py  ex03.rst  ex04.py  ex04.rst  ex04_mesh.json  ex04_mesh.off  ex05.py  ex05.rst  ex06.py  ex06.rst  ex07.py  ex07.rst  ex08.py  ex08.rst  ex09.py  ex09.rst  ex10.py  ex10.rst  ex10_jfnk.py  ex10_nk.py  ex10_root.py  ex11.py  ex11.rst  ex12.py  (+94 more)
docs/integrations/: solver_pymumps.py
docs/tutorials/: poisson.rst  walkthrough.rst
examples/: Makefile  biharmonic.py  box.msh  circle.py  conductance.py  dirichlet.py  ex01.py  ex01.rst  ex02.py  ex02.rst  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  ex1.py  ex10.py  ex11.py  ex12.ipynb  ex12.py  ex13.py  ex14.py  ex15.py  ex16.py  ex17.py  ex17.rst  ex18.py  ex18.rst  ex19.py  ex19.rst  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  (+4 more)
paper/: paper.bib  paper.md
skfem/: __about__.py  __init__.py  assembly.py  element.py  extern_sfepy.py  generic_utils.py  helpers.py  mapping.py  mesh.py  models.py  multi.py  multipoint.py  print_all.py  quadrature.py  refdom.py  supermeshing.py  utils.py  version.py  visualize.py  weakforms.py
skfem/algorithms/: continuation.py
skfem/assembly/: __init__.py  asm.py  dofnum.py  dofs.py  forms.py
skfem/autodiff/: __init__.py  helpers.py
skfem/element/: __init__.py  discrete_field.py  element.py  element_composite.py  element_constant.py  element_dg.py  element_global.py  element_h1.py  element_h2.py  element_hcurl.py  element_hdiv.py  element_hexagon_1.py  element_matrix.py  element_vector.py  element_vector_h1.py  element_wedge_1.py
skfem/experimental/: __init__.py
skfem/importers/: __init__.py  json.py  meshio.py
skfem/io/: __init__.py  json.py  meshio.py
skfem/mapping/: __init__.py  mapping.py  mapping_affine.py  mapping_isoparametric.py  mapping_mortar.py  mortar_pair.py
skfem/mesh/: graph.py  (+30 more)
tests/: test_assembly.py  test_autodiff.py  test_basis.py  test_convergence.py  test_convergence_h2.py  test_convergence_hdiv.py  test_convergence_nk.py  test_dofs.py  test_drawing.py  test_element_line_pp.py  test_element_quad_bfs.py  test_elements.py  test_examples.py  test_high_order.py  test_integrations.py  test_lab.py  test_mamba.py  test_manufactured.py  test_mapping.py  test_mesh.py  test_p_convergence.py  test_utils.py  test_visuals.py
(+156 files in other folders)
