[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scikit-fem"
authors = [{name = "Tom Gustafsson"}]
description = "Simple finite element assemblers"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
all = ["matplotlib", "meshio"]

[project.urls]
Home = "https://github.com/kinnala/scikit-fem"
Code = "https://github.com/kinnala/scikit-fem"

[tool.flit.module]
name = "skfem"