[metadata]
name = scikit-fem
version = 3.2.0
author = Tom Gustafsson
description = Simple finite element assemblers
url = https://github.com/kinnala/scikit-fem
project_urls =
    Code=https://github.com/kinnala/scikit-fem
    Issues=https://github.com/kinnala/scikit-fem/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE.md
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    numpy
    scipy
    meshio>=4.0.4
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.packages.find]
exclude =
    tests