[metadata]
name = scikit-fem
version = 9.0.1
author = Tom Gustafsson
description = Simple finite element assemblers
url = https://github.com/kinnala/scikit-fem
project_urls =
    Code=https://github.com/kinnala/scikit-fem
    Issues=https://github.com/kinnala/scikit-fem/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    numpy
    scipy
python_requires = >=3.8
setup_requires =
    setuptools>=42
    wheel

[options.extras_require]
all = meshio>=4.0.4; matplotlib

[options.packages.find]
exclude =
    tests
